03/07/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicio-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: aplicacion-externa
  ports:
    - port: 80
      targetPort: 80
