03/07/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicio-nodeport
spec:
  type: NodePort
  selector:
    app: aplicacion-externa
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
