03/07/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicio
spec:
  selector:
    app: aplicacion-externa
  ports:
    - port: 80
      targetPort: 80
