03/07/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-basico
spec:
  defaultBackend:
    service:
      name: servicio
      port:
        number: 80
